--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,12 +13,12 @@ variables:
 
 steps:
 - script: |
-    echo "user.name=$(userName)" > app.properties
-    echo "user.password=$(userPassword)" >> app.properties
-    echo "user.first.name=$(userFirstName)" >> app.properties
-    echo "user.last.name=$(userLastName)" >> app.properties
-    echo "user.id=$(userId)" >> app.properties
-  displayName: 'Write user variables to app.properties'
+    echo "user.name=$(userName)" > credentials.properties
+    echo "user.password=$(userPassword)" >> credentials.properties
+    echo "user.first.name=$(userFirstName)" >> credentials.properties
+    echo "user.last.name=$(userLastName)" >> credentials.properties
+    echo "user.id=$(userId)" >> credentials.properties
+  displayName: 'Write user variables to credentials.properties'
 
 - task: Gradle@4
   inputs:
