Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -8,6 +8,8 @@ variables:
 - group: Books
 
 steps:
+- checkout: self
+
 - script: |
     echo "user.name=$(userName)" > credentials.properties
     echo "user.password=$(userPassword)" >> credentials.properties
