Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,4 +13,4 @@ steps:
 - script: |
     echo "Variable from group Books:"
     echo "user.name = ${{ variables.userName }}"
-  displayName: '🧪 Test variable access from group'
+  displayName: 'Test variable access from group'
