Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,25 @@
 trigger:
-- main
+- none
 
 pool:
   name: Default
 
 variables:
 - group: Books
+- name: System.Debug
+  value: true
 
 steps:
 - checkout: self
 
 - script: |
-    echo "Variable from group Books:"
-    echo "user.name = ${{ variables.userName }}"
-  displayName: 'Test variable access from group'
+    echo "======================"
+    echo "🔍 DEBUG: Variable Group Test"
+    echo "userName: $(userName)"
+    echo "userPassword: $(userPassword)"
+    echo "userFirstName: $(userFirstName)"
+    echo "userLastName: $(userLastName)"
+    echo "userId: $(userId)"
+    echo "======================"
+  displayName: 'Проверка переменных из Variable Group'
+
