--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -1,29 +1,50 @@
- trigger:
- - main
- 
- pool:
-   name: Default
- 
- variables:
- - group: Books
- 
- steps:
- - script: |
-     echo "user.name=$(userName)" >> credentials.properties
-     echo "user.password=$(userPassword)" >> credentials.properties
-     echo "user.first.name=$(userFirstName)" >> credentials.properties
-     echo "user.last.name=$(userLastName)" >> credentials.properties
-     echo "user.id=$(userId)" >> credentials.properties
-   displayName: 'Write user variables to credentials.properties'
- 
- - task: Gradle@4
-   inputs:
-     gradleWrapperFile: 'gradlew'
-     tasks: 'build'
-     publishJUnitResults: true
-     testResultsFiles: '**/TEST-*.xml'
-     javaHomeOption: 'JDKVersion'
-     jdkVersionOption: '1.17'
-     jdkArchitectureOption: 'x64'
-     sonarQubeRunAnalysis: false
-     spotBugsAnalysis: false
+trigger:
+  branches:
+    include:
+      - main
+
+pool:
+  name: Default
+
+variables:
+  - group: Books
+
+steps:
+  - script: |
+      echo "user.name=$(userName)" >> credentials.properties
+      echo "user.password=$(userPassword)" >> credentials.properties
+      echo "user.first.name=$(userFirstName)" >> credentials.properties
+      echo "user.last.name=$(userLastName)" >> credentials.properties
+      echo "user.id=$(userId)" >> credentials.properties
+    displayName: 'Write user variables to credentials.properties'
+
+  - task: JavaToolInstaller@1
+    inputs:
+      versionSpec: '17'
+      jdkArchitectureOption: 'x64'
+      jdkSourceOption: 'PreInstalled'
+
+  - task: Gradle@4
+    inputs:
+      gradleWrapperFile: 'gradlew'
+      tasks: 'clean test'
+      publishJUnitResults: true
+      testResultsFiles: '**/build/test-results/test/TEST-*.xml'
+      javaHomeOption: 'JDKVersion'
+      jdkVersionOption: '1.17'
+      jdkArchitectureOption: 'x64'
+      sonarQubeRunAnalysis: false
+      spotBugsAnalysis: false
+
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: 'credentials.properties'
+      ArtifactName: 'credentials'
+      publishLocation: 'Container'
+
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: 'build/reports/tests/test'
+      ArtifactName: 'testng-html-report'
+      publishLocation: 'Container'
+    condition: succeededOrFailed()
