--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -1,7 +1,13 @@
-trigger:
-  branches:
-    include:
-      - main
+trigger: none
+
+resources:
+  pipelines:
+  - pipeline: BuildPipeline
+    source: 2435768-qa.projectWithMaven  # имя pipeline
+    trigger:
+      branches:
+        include:
+        - main
 
 pool:
   name: Default
